[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/crosshair.gd" type="Script" id=2]
[ext_resource path="res://Resources/Qtestsgun1.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape" id=7]
radius = 0.495
height = 0.601

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.705882, 0.592157, 0.592157, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 3 )
top_radius = 0.07
bottom_radius = 0.07
height = 1.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("RocketLauncher:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RocketLauncher:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RocketLauncher:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RocketLauncher:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RocketLauncher:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("RocketLauncher:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "recoil"
length = 0.79
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("RocketLauncher:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RocketLauncher:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RocketLauncher:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -0.5, -0.25, 0, 0.25, 0, -0.175031, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.79 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RocketLauncher:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 96.284, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.79 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RocketLauncher:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("RocketLauncher:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="CapsuleShape" id=8]
radius = 0.495
height = 0.001

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="." groups=["Entities", "Player"]]

[node name="CollisionHull" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.791, 0 )
shape = SubResource( 7 )

[node name="Head" type="Spatial" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.296, 0 )

[node name="UpDown" type="Spatial" parent="KinematicBody/Head"]

[node name="RocketLauncher" type="MeshInstance" parent="KinematicBody/Head/UpDown"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, -0.5 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="Camera" type="Camera" parent="KinematicBody/Head/UpDown"]
fov = 100.0
near = 0.01
far = 1000.0
script = ExtResource( 2 )

[node name="Crosshair" type="Control" parent="KinematicBody/Head/UpDown/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="KinematicBody/Head/UpDown/Camera/Crosshair"]
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0.196078, 1, 0, 1 )

[node name="Control2" type="Control" parent="KinematicBody/Head/UpDown/Camera"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="KinematicBody/Head/UpDown/Camera/Control2"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Dialogue" type="Control" parent="KinematicBody/Head/UpDown/Camera"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 696, 90 )

[node name="DB" type="ColorRect" parent="KinematicBody/Head/UpDown/Camera/Dialogue"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 172.0
color = Color( 0.396078, 0.494118, 0.4, 0.733333 )

[node name="Label" type="RichTextLabel" parent="KinematicBody/Head/UpDown/Camera/Dialogue/DB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 14
size_flags_vertical = 14
bbcode_enabled = true
visible_characters = 0
fit_content_height = true
scroll_active = false

[node name="Continue" type="Label" parent="KinematicBody/Head/UpDown/Camera/Dialogue/DB"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -15.0
margin_bottom = 14.0
text = "Press E to continue"

[node name="Pic" type="TextureRect" parent="KinematicBody/Head/UpDown/Camera/Dialogue"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -262.0
margin_top = 40.0
margin_right = -130.0
margin_bottom = 240.0

[node name="FiringPos" type="Spatial" parent="KinematicBody/Head/UpDown"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.057, 0 )

[node name="Animation" type="AnimationPlayer" parent="KinematicBody/Head/UpDown"]
anims/RESET = SubResource( 5 )
anims/recoil = SubResource( 6 )

[node name="Flashlight" type="SpotLight" parent="KinematicBody/Head/UpDown"]
spot_range = 30.0
spot_attenuation = 8.28212
spot_angle = 90.0

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="KinematicBody"]
stream = ExtResource( 3 )
unit_db = -10.0
max_distance = 36.25

[node name="AreaScan" type="Area" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.24983, 0 )

[node name="CollisionHull" type="CollisionShape" parent="KinematicBody/AreaScan"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.791, 0 )
shape = SubResource( 8 )

[node name="BodyLight" type="OmniLight" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
omni_range = 7.0
omni_attenuation = 16.5642

[connection signal="impart_force" from="." to="." method="_on_Player_impart_force"]
[connection signal="area_entered" from="KinematicBody/AreaScan" to="." method="_on_AreaScan_area_entered"]
[connection signal="body_entered" from="KinematicBody/AreaScan" to="." method="_on_AreaScan_body_entered"]
